extension code reload updtes (local support / platform development loops)

--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
     "admin:udp": "ssh root@157.245.134.225",
     "admin:firebase": "xdg-open https://console.firebase.google.com/?pli=1",
     "tunnel": "ngrok http https://localhost:8888 --domain local.aesthetic.computer",
-    "aesthetic": "concurrently --raw \"npm run code\" \"npm run server:session\" \"npm run edge\" \"npm run stripe\" \"npm run url\"",
+    "aesthetic": "concurrently --raw \"npm run code\" \"npm run server:session\" \"npm run edge\" \"npm run stripe\" \"npm run url\" \"npm run ext:watch\"",
     "ext": "cd vscode-extension; npm run reload;",
+    "ext:watch": "cd vscode-extension; npm run watch;",
     "ext:publish": "cd vscode-extension; npm run publish;",
     "code": "cd system; npm run codespaces-dev",
     "stripe": "cd system; npm run stripe-dev-sotce",
