--- a/vscode-extension/package.json
+++ b/vscode-extension/package.json
@@ -1,11 +1,11 @@
 {
   "name": "aesthetic-computer-code",
   "publisher": "aesthetic-computer",
-  "displayName": "aesthetic.computer",
+  "displayName": "Aesthetic Computer",
   "icon": "resources/icon.png",
   "author": "Jeffrey Alan Scudder",
-  "version": "1.11.0",
-  "description": "An extension for loading and running aesthetic.computer pieces in VS Code.",
+  "version": "1.14.0",
+  "description": "Code, run, and publish your pieces.",
   "engines": {
     "vscode": "^1.74.2"
   },
@@ -66,7 +66,7 @@
     "@types/node": "^20.11.6",
     "@types/uuid": "^9.0.7",
     "@types/vscode": "^1.74.2",
-    "@vscode/vsce": "^2.22.0",
+    "@vscode/vsce": "^2.23.0",
     "typescript": "^5.3.3"
   },
   "dependencies": {
