--- a/vscode-extension/package.json
+++ b/vscode-extension/package.json
@@ -4,12 +4,13 @@
   "displayName": "Aesthetic Computer",
   "icon": "resources/icon.png",
   "author": "Jeffrey Alan Scudder",
-  "version": "1.23.0",
+  "version": "1.25.0",
   "description": "Code, run, and publish your pieces.",
   "engines": {
     "vscode": "^1.74.2"
   },
   "scripts": {
+    "vscode.dev": "npx serve --cors -l 6000 --ssl-cert ../ssl-dev/localhost.pem --ssl-key ../ssl-dev/localhost-key.pem",
     "esbuild-base": "esbuild ./extension.ts --bundle --outfile=out/extension.js --external:vscode --format=cjs --platform=node",
     "esbuild": "npm run esbuild-base -- --sourcemap",
     "compile": "npm run esbuild",
