reverse `require-corp`

--- a/system/netlify.toml
+++ b/system/netlify.toml
@@ -69,7 +69,7 @@
     Access-Control-Allow-Origin = "*"
     # These headers are required in order for SharedArrayBuffer to be enabled.
     # Currently used by ffmpeg.wasm. 22.08.06.11.01
-    Cross-Origin-Embedder-Policy = "require-corp"
+    # Cross-Origin-Embedder-Policy = "require-corp"
     Cross-Origin-Opener-Policy = "same-origin-allow-popups"
     Cross-Origin-Resource-Policy = "cross-origin"
 [[headers]]
@@ -107,6 +107,11 @@
   to = "/.netlify/functions/slash"
   status = 200
   force = true
+# [[redirects]]
+#   from = "/api/stripe-js"
+#   to = "/.netlify/functions/stripe-js"
+#   status = 200
+#   force = true
 [[redirects]]
   from = "https://www.4esthetic.com/*"
   to = "https://aesthetic.computer/:splat"
