--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "admin:udp": "ssh root@157.245.134.225",
     "admin:firebase": "xdg-open https://console.firebase.google.com/?pli=1",
     "tunnel": "ngrok http https://localhost:8888 --domain local.aesthetic.computer",
+    "aesthetic-emacs": "emacs -q -l aesthetic.el",
     "aesthetic": "concurrently --raw \"npm run code\" \"npm run server:session\" \"npm run edge\" \"npm run stripe\" \"npm run url\"",
     "ext": "cd vscode-extension; npm run reload;",
     "ext:watch": "cd vscode-extension; npm run watch;",
