--- a/session-server/package.json
+++ b/session-server/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "start": "node session.mjs",
     "start-do": "PORT=80 node session.mjs",
-    "dev": "PORT=8889 NODE_ENV=development nodemon --watch session.mjs session.mjs",
+    "dev": "PORT=8889 NODE_ENV=development nodemon --watch -- --trace-warnings session.mjs session.mjs",
     "create": "npx jamsocket service create session-server",
     "build": "echo Built 😄",
     "build:jamsocket": "docker build --platform linux/amd64 --tag session-server-image .",
