switch to emacs launcher for `npm run aesthetic`

--- a/package.json
+++ b/package.json
@@ -8,13 +8,16 @@
     "upgrade": "ncu -u",
     "url": "node generate-local-url.js",
     "ac": "npm run aesthetic",
+    "ace": "npm run aesthetic-emacs",
     "admin:udp": "ssh root@157.245.134.225",
     "admin:firebase": "xdg-open https://console.firebase.google.com/?pli=1",
     "tunnel": "ngrok http https://localhost:8888 --domain local.aesthetic.computer",
-    "aesthetic-emacs": "emacs -q -l aesthetic.el",
-    "aesthetic": "concurrently --raw \"npm run code\" \"npm run server:session\" \"npm run edge\" \"npm run stripe\" \"npm run url\"",
+    "aesthetic-emacs": "emacs -q -l aesthetic.el &",
+    "aesthetic-emacs-term": "emacs -nw -q -l aesthetic.el",
+    "aesthetic": "npm run aesthetic-emacs",
     "aesthetic-emacs-top": "concurrently --raw \"npm run code\" \"npm run edge\" \"npm run stripe\" \"npm run url\"",
     "aesthetic-emacs-bottom": "npm run server:session",
+    "aesthetic:all": "concurrently --raw \"npm run code\" \"npm run server:session\" \"npm run edge\" \"npm run stripe\" \"npm run url\"",
     "ext": "cd vscode-extension; npm run reload;",
     "ext:watch": "cd vscode-extension; npm run watch;",
     "ext:publish": "cd vscode-extension; npm run publish;",
