--- a/session-server/package.json
+++ b/session-server/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "start": "node session.mjs",
     "start-do": "PORT=80 node session.mjs",
-    "dev": "PORT=8889 NODE_ENV=development nodemon --watch session.mjs session.mjs",
+    "dev": "PORT=8889 NODE_ENV=development nodemon -I --watch session.mjs session.mjs",
     "create": "npx jamsocket service create session-server",
     "build": "echo Built 😄",
     "build:jamsocket": "docker build --platform linux/amd64 --tag session-server-image .",
@@ -25,11 +25,13 @@
     "fastify": "^4.19.2",
     "firebase-admin": "^12.0.0",
     "ip": "^1.1.8",
+    "jamsocket": "^0.8.8",
     "obscenity": "^0.1.4",
     "redis": "^4.6.7",
     "ws": "^8.13.0"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "terminal-kit": "^3.1.1"
   }
 }
