--- a/micro/machine/docker-compose.yml
+++ b/micro/machine/docker-compose.yml
@@ -9,5 +9,8 @@ services:
       - "8888:8888"
     env_file:
       - .env
+      - github.env
+      - netlify.env
+      - vercel.env
     volumes:
       - ../..:/home/me/aesthetic-computer
