more work on micro / server dashboard

--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "The header package for the whole aesthetic.computer codebase.",
   "type": "module",
   "scripts": {
-    "micro": "cd micro/machine; ./boot",
+    "from-scratch": "npm run reset; npm run build-boot-and-edit",
+    "build-boot-and-edit": "npm run boot; nohup emacs --eval '(aesthetic-backend)' &",
+    "reset": "cd micro; npm run reset",
+    "boot": "cd micro; npm run boot",
     "upgrade": "ncu -u",
     "url": "node generate-local-url.js",
     "ac": "npm run aesthetic",
@@ -19,8 +22,11 @@
     "ext:watch": "cd vscode-extension; npm run watch;",
     "ext:publish": "cd vscode-extension; npm run publish;",
     "code": "cd system; npm run codespaces-dev",
-    "stripe": "cd system; npm run stripe-dev-sotce",
+    "stripe": "cd system; npm run stripe-dev",
+    "stripe-print-micro": "cd system; npm run stripe-dev-print-micro",
+    "stripe-ticket-micro": "cd system; npm run stripe-dev-ticket-micro",
     "edge": "vercel dev",
+    "edge-micro": "vercel --token $VERCEL_TOKEN dev",
     "edge.old": "concurrently --raw \"vercel dev\" \"http-server edge-stream -p 9000 --cors -c-1 -i --P http://localhost:3000 -S --cert ssl-dev/localhost.pem --key ssl-dev/localhost-key.pem\"",
     "code:debug": "cd system; npm run codespaces-dev-debug",
     "code:live": "cd system; npm run codespaces-dev-public",
