--- a/micro/machine/Dockerfile
+++ b/micro/machine/Dockerfile
@@ -21,6 +21,9 @@ RUN chsh -s /usr/bin/fish me
 RUN mkdir -p /home/linuxbrew/.linuxbrew && \
     chown -R me:me /home/linuxbrew/.linuxbrew
 
+# Download and install the Stripe CLI
+RUN curl -sL https://github.com/stripe/stripe-cli/releases/download/v1.19.2/stripe_1.19.2_linux_x86_64.tar.gz | tar xz -C /usr/local/bin
+
 # Switch to current user.
 USER me
 
