bring in dotfiles / first commit from docker

--- a/micro/package.json
+++ b/micro/package.json
@@ -7,14 +7,13 @@
     "build": "docker build -t aesthetic-micro machine",
     "boot": "cd machine; if [ -z \"$(docker ps -aq -f name=aesthetic-container)\" ]; then npm run build && docker run -d -p 8888:8888 -p 8889:8889 --hostname aesthetic --env-file .env --env-file github.env --env-file netlify.env --env-file vercel.env --env-file stripe.env --volume ~/Desktop/code/aesthetic-computer:/home/me/aesthetic-computer --user me --platform linux/amd64 --name aesthetic-container -it aesthetic-micro /usr/bin/fish entry.fish; else docker start aesthetic-container; fi",
     "emacs": "echo hi",
-    "shell": "docker exec -it aesthetic-container /usr/bin/fish",
+    "shell": "docker exec -it aesthetic-container /usr/bin/fish -c 'ac-url; and /usr/bin/fish -i'",
     "redis": "docker exec -it aesthetic-container /usr/bin/fish -c 'redis-server'",
     "code": "docker exec -it aesthetic-container /usr/bin/fish -c 'ac-code'",
     "session": "docker exec -it aesthetic-container /usr/bin/fish -c 'ac-session'",
     "edge": "docker exec -it aesthetic-container /usr/bin/fish -c 'ac-edge'",
     "stripe-print": "docker exec -it aesthetic-container /usr/bin/fish -c 'ac-stripe-print'",
     "stripe-ticket": "docker exec -it aesthetic-container /usr/bin/fish -c 'ac-stripe-ticket'",
-    "url": "docker exec -it aesthetic-container /usr/bin/fish -c 'ac-url'",
     "watch": "cd machine; node watch.mjs",
     "reset": "cd machine; docker ps -q -a --filter 'name=aesthetic-container' | xargs -r docker rm -f; docker rmi aesthetic-micro -f"
   },
