windows compatibility in micro

--- a/micro/package.json
+++ b/micro/package.json
@@ -4,16 +4,18 @@
   "description": "A portable Fedora based environment for running and hacking on aesthetic-computer.",
   "type": "module",
   "scripts": {
+    "reset-and-boot": "npm run reset; npm run boot",
     "build": "docker build -t aesthetic-micro machine",
-    "boot": "cd machine; if [ -z \"$(docker ps -aq -f name=aesthetic-container)\" ]; then npm run build && docker run -d -p 8888:8888 -p 8889:8889 --hostname aesthetic --env-file .env --env-file github.env --env-file netlify.env --env-file vercel.env --env-file stripe.env -e GIT_USER_EMAIL=\"$(git config --global user.email)\" -e GIT_USER_NAME=\"$(git config --global user.name)\" --volume ~/Desktop/code/aesthetic-computer:/home/me/aesthetic-computer --user me --platform linux/amd64 --name aesthetic-container -it aesthetic-micro /usr/bin/fish entry.fish; else docker start aesthetic-container; fi",
+    "boot": "parentDir=$(dirname $(pwd)); cd machine; if [[ $parentDir =~ ^/[a-zA-Z]/ ]]; then parentDir=$(echo $parentDir | sed 's|^/\\([a-zA-Z]\\)/|\\1:/|'); fi; if [ -z \"$(docker ps -aq -f name=aesthetic-container)\" ]; then npm run build && docker run -d -p 8888:8888 -p 8889:8889 --hostname aesthetic --env-file .env --env-file github.env --env-file netlify.env --env-file vercel.env --env-file stripe.env -e GIT_USER_EMAIL=\"$(git config --global user.email)\" -e GIT_USER_NAME=\"$(git config --global user.name)\" -v \"${parentDir}:/home/me/aesthetic-computer\" --user me --platform linux/amd64 --name aesthetic-container -it aesthetic-micro /usr/bin/fish entry.fish; else docker start aesthetic-container; fi",
     "emacs": "echo hi",
-    "shell": "docker exec -it aesthetic-container /usr/bin/fish -c 'ac-url; and /usr/bin/fish -i'",
-    "redis": "docker exec -it aesthetic-container /usr/bin/fish -c 'redis-server'",
-    "code": "docker exec -it aesthetic-container /usr/bin/fish -c 'ac-code'",
-    "session": "docker exec -it aesthetic-container /usr/bin/fish -c 'ac-session'",
-    "edge": "docker exec -it aesthetic-container /usr/bin/fish -c 'ac-edge'",
-    "stripe-print": "docker exec -it aesthetic-container /usr/bin/fish -c 'ac-stripe-print'",
-    "stripe-ticket": "docker exec -it aesthetic-container /usr/bin/fish -c 'ac-stripe-ticket'",
+    "fish": "docker exec -it aesthetic-container //usr/bin/fish",
+    "shell": "docker exec -it aesthetic-container //usr/bin/fish -c 'ac-url; and /usr/bin/fish -i'",
+    "redis": "docker exec -it aesthetic-container //usr/bin/fish -c 'redis-server'",
+    "code": "docker exec -it aesthetic-container //usr/bin/fish -c 'ac-code'",
+    "session": "docker exec -it aesthetic-container //usr/bin/fish -c 'ac-session'",
+    "edge": "docker exec -it aesthetic-container //usr/bin/fish -c 'ac-edge'",
+    "stripe-print": "docker exec -it aesthetic-container //usr/bin/fish -c 'ac-stripe-print'",
+    "stripe-ticket": "docker exec -it aesthetic-container //usr/bin/fish -c 'ac-stripe-ticket'",
     "watch": "cd machine; node watch.mjs",
     "reset": "cd machine; docker ps -q -a --filter 'name=aesthetic-container' | xargs -r docker rm -f; docker rmi aesthetic-micro -f"
   },
